Bug 298831 - Kmail2 crash on save as draft
Summary: Kmail2 crash on save as draft
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 4.8
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 304894 312562 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-04-26 00:21 UTC by Christopher Heiny
Modified: 2013-02-26 05:22 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.97 KB, text/plain)
2012-04-27 06:49 UTC, Seppo Lehtikangas
Details
New crash information added by DrKonqi (7.31 KB, text/plain)
2012-05-15 22:31 UTC, Den.Jean
Details
New crash information added by DrKonqi (5.08 KB, text/plain)
2012-08-22 01:36 UTC, marc.reilly
Details
New crash information added by DrKonqi (6.54 KB, text/plain)
2012-08-25 18:31 UTC, Den.Jean
Details
New crash information added by DrKonqi (7.58 KB, text/plain)
2012-09-14 21:35 UTC, thus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christopher Heiny 2012-04-26 00:21:51 UTC
Application: kmail (4.8.1)
KDE Platform Version: 4.8.1 (4.8.1)
Qt Version: 4.8.0
Operating System: Linux 3.3.1-3.fc16.x86_64 x86_64
Distribution: "Fedora release 16 (Verne)"

-- Information about the crash:
Started composing an email.  Tried to save it as a draft.  Kmail crashes.  This happens 100% of the time, and renders drafts useless.

There's another bug that might be related (should be noted in the report), though that one appears to be IMAP specific and I'm only using local mail folders (no IMAP at all).

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[Current thread is 1 (Thread 0x7f0c29df9840 (LWP 9764))]

Thread 3 (Thread 0x7f0c1c9e9700 (LWP 9777)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:165
#1  0x0000003210db86ec in WTF::TCMalloc_PageHeap::scavengerThread (this=0x321177cc20) at ../../../Source/JavaScriptCore/wtf/FastMalloc.cpp:2495
#2  0x0000003210db8819 in WTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at ../../../Source/JavaScriptCore/wtf/FastMalloc.cpp:1618
#3  0x0000003a07207d90 in start_thread (arg=0x7f0c1c9e9700) at pthread_create.c:309
#4  0x0000003a066f0f5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 2 (Thread 0x7f0c1c0d0700 (LWP 9778)):
#0  0x0000003a066e85c3 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x0000003a09a44fd8 in g_main_context_poll (n_fds=1, fds=0x7f0c140013e0, priority=<optimized out>, timeout=7244, context=0x7f0c140009a0) at gmain.c:3402
#2  g_main_context_iterate (context=0x7f0c140009a0, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3084
#3  0x0000003a09a4549c in g_main_context_iteration (context=0x7f0c140009a0, may_block=1) at gmain.c:3152
#4  0x0000003cb4da7dc6 in QEventDispatcherGlib::processEvents (this=0x7f0c140008c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#5  0x0000003cb4d78182 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x0000003cb4d783d7 in QEventLoop::exec (this=0x7f0c1c0cfd40, flags=...) at kernel/qeventloop.cpp:204
#7  0x0000003cb4c78b27 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x0000003cb4c7bb6b in QThreadPrivate::start (arg=0x1e7a710) at thread/qthread_unix.cpp:298
#9  0x0000003a07207d90 in start_thread (arg=0x7f0c1c0d0700) at pthread_create.c:309
#10 0x0000003a066f0f5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7f0c29df9840 (LWP 9764)):
[KCrash Handler]
#6  QSharedDataPointer (o=..., this=0x7fff200f1140) at /usr/include/QtCore/qshareddata.h:93
#7  assignEntityPrivate (one=..., other=...) at /usr/src/debug/kdepimlibs-4.8.1/akonadi/entity.cpp:49
#8  0x000000320e48082e in Akonadi::Entity::operator= (this=0x7fff200f1180, other=<optimized out>) at /usr/src/debug/kdepimlibs-4.8.1/akonadi/entity.cpp:116
#9  0x0000003218e7d895 in operator= (this=0x7fff200f1180) at /usr/include/kde4/akonadi/collection.h:75
#10 Message::ComposerViewBase::slotSaveMessage (this=0x17bbc00, job=0x49b5ee0) at /usr/src/debug/kdepim-4.8.1/messagecomposer/composerviewbase.cpp:944
#11 0x0000003cb4d8cce1 in QMetaObject::activate (sender=0x49b5ee0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff200f1330) at kernel/qobject.cpp:3547
#12 0x000000320a541fc2 in KJob::result (this=<optimized out>, _t1=0x49b5ee0) at /usr/src/debug/kdelibs-4.8.1/x86_64-redhat-linux-gnu/kdecore/kjob.moc:208
#13 0x000000320a542000 in KJob::emitResult (this=0x49b5ee0) at /usr/src/debug/kdelibs-4.8.1/kdecore/jobs/kjob.cpp:318
#14 0x0000003cb4d91f16 in QObject::event (this=0x49b5ee0, e=<optimized out>) at kernel/qobject.cpp:1195
#15 0x0000003cb93c9994 in notify_helper (e=0x4956fb0, receiver=0x49b5ee0, this=0x13e7f00) at kernel/qapplication.cpp:4550
#16 QApplicationPrivate::notify_helper (this=0x13e7f00, receiver=0x49b5ee0, e=0x4956fb0) at kernel/qapplication.cpp:4522
#17 0x0000003cb93ce813 in QApplication::notify (this=0x7fff200f1da0, receiver=0x49b5ee0, e=0x4956fb0) at kernel/qapplication.cpp:4411
#18 0x000000320b051d56 in KApplication::notify (this=0x7fff200f1da0, receiver=0x49b5ee0, event=0x4956fb0) at /usr/src/debug/kdelibs-4.8.1/kdeui/kernel/kapplication.cpp:311
#19 0x0000003cb4d7904c in QCoreApplication::notifyInternal (this=0x7fff200f1da0, receiver=0x49b5ee0, event=0x4956fb0) at kernel/qcoreapplication.cpp:876
#20 0x0000003cb4d7cada in sendEvent (event=0x4956fb0, receiver=0x49b5ee0) at kernel/qcoreapplication.h:231
#21 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x1392210) at kernel/qcoreapplication.cpp:1500
#22 0x0000003cb4da7933 in sendPostedEvents () at kernel/qcoreapplication.h:236
#23 postEventSourceDispatch (s=0x13ef300) at kernel/qeventdispatcher_glib.cpp:279
#24 0x0000003a09a44acd in g_main_dispatch (context=0x13ee110) at gmain.c:2441
#25 g_main_context_dispatch (context=0x13ee110) at gmain.c:3011
#26 0x0000003a09a452c8 in g_main_context_iterate (context=0x13ee110, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3089
#27 0x0000003a09a4549c in g_main_context_iteration (context=0x13ee110, may_block=1) at gmain.c:3152
#28 0x0000003cb4da7d5f in QEventDispatcherGlib::processEvents (this=0x1393af0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#29 0x0000003cb946c66e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:207
#30 0x0000003cb4d78182 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#31 0x0000003cb4d783d7 in QEventLoop::exec (this=0x7fff200f1c80, flags=...) at kernel/qeventloop.cpp:204
#32 0x0000003cb4d7cdd5 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#33 0x0000000000402d23 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kdepim-4.8.1/kmail/main.cpp:145

This bug may be a duplicate of or related to bug 253031.

Possible duplicates by query: bug 294453, bug 293820, bug 290184, bug 283680, bug 283619.

Reported using DrKonqi
Comment 1 Laurent Montel 2012-04-26 08:52:53 UTC
"There's another bug that might be related (should be noted in the report), though that one appears to be IMAP specific and I'm only using local mail folders (no IMAP at all)." ?
Comment 2 Christopher Heiny 2012-04-26 15:17:57 UTC
Grumble. The bug reporting tool indicate it would note that bug as a possible duplicate in the report. But I guess it didn't. I'll track it down again.
Comment 3 Christopher Heiny 2012-04-26 16:03:00 UTC
Oh wait, I see it - it's listed way at the bottom, below the stack trace.  The possible duplicate is bug 253031.
Comment 4 Seppo Lehtikangas 2012-04-27 06:49:27 UTC
Created attachment 70688 [details]
New crash information added by DrKonqi

kmail (4.7.4) on KDE Platform 4.7.4 (4.7.4) using Qt 4.7.4

Saving a draft crashes Kmail every time. Nothing more to write.

-- Backtrace (Reduced):
#7  QSharedDataPointer (one=..., other=...) at /usr/include/QtCore/qshareddata.h:93
#8  assignEntityPrivate (one=..., other=...) at /usr/src/debug/kdepimlibs-4.7.4/akonadi/entity.cpp:49
#9  0xb54a24c7 in Akonadi::Entity::operator= (this=0xbfbd3bec, other=...) at /usr/src/debug/kdepimlibs-4.7.4/akonadi/entity.cpp:116
#10 0xb53376b6 in operator= (this=0x835eab0, job=0x86f8ce0) at /usr/include/akonadi/collection.h:76
#11 Message::ComposerViewBase::slotSaveMessage (this=0x835eab0, job=0x86f8ce0) at /usr/src/debug/kdepim-4.7.4/messagecomposer/composerviewbase.cpp:978
Comment 5 Den.Jean 2012-05-15 22:31:20 UTC
Created attachment 71121 [details]
New crash information added by DrKonqi

kmail (4.8.3) on KDE Platform 4.8.3 (4.8.3) using Qt 4.8.1

- What I was doing when the application crashed:
start kmail, create new mail, save as draft -> crash
when restarting kmail, the new mail dialog reappears, trying
again to save as draft causes crash too.

-- Backtrace (Reduced):
#7  QSharedDataPointer (o=..., this=0xbf9f918c) at /usr/include/qt4/QtCore/qshareddata.h:93
#8  assignEntityPrivate (one=..., other=...) at ../../akonadi/entity.cpp:49
#9  0xb532b007 in Akonadi::Entity::operator= (this=0xbf9f91f8, other=...) at ../../akonadi/entity.cpp:116
#10 0xb51cc85d in operator= (this=<optimized out>) at /usr/include/akonadi/collection.h:75
#11 Message::ComposerViewBase::slotSaveMessage (this=0xa42c800, job=0xaeb0a80) at ../../messagecomposer/composerviewbase.cpp:944
Comment 6 Den.Jean 2012-07-03 17:16:53 UTC
I now have Fedora 17, latest updates and nvidia drivers and have had many, many, many, many, many crashes (knotify, kmail, ...). It  improved alot by disabling prelink in /etc/sysconfig/prelink. But this 'save as draft' crash problem persists and can be reproduced 100% . So this comment is to clarify this bug is not related to other reports about kde stuff crashing alot.
Comment 7 Jekyll Wu 2012-08-10 00:06:55 UTC
*** Bug 304894 has been marked as a duplicate of this bug. ***
Comment 8 marc.reilly 2012-08-22 01:36:52 UTC
Created attachment 73375 [details]
New crash information added by DrKonqi

kmail (4.8.5) on KDE Platform 4.8.5 (4.8.5) "release 521" using Qt 4.8.2

- What I was doing when the application crashed:

Saving a draft. The draft was a reply to an email. I had written stuff.

-- Backtrace (Reduced):
#6  QSharedDataPointer (o=..., this=0x7fffb3e03bd0) at /usr/include/QtCore/qshareddata.h:93
#7  assignEntityPrivate (one=..., other=...) at /usr/src/debug/kdepimlibs-4.8.5/akonadi/entity.cpp:49
#8  0x00007fcd45fc8bce in Akonadi::Entity::operator= (this=0x7fffb3e03c10, other=<optimized out>) at /usr/src/debug/kdepimlibs-4.8.5/akonadi/entity.cpp:116
#9  0x00007fcd45828325 in operator= (this=0x7fffb3e03c10) at /usr/include/akonadi/collection.h:75
#10 Message::ComposerViewBase::slotSaveMessage (this=0x9de5b0, job=0x696130) at /usr/src/debug/kdepim-4.8.5/messagecomposer/composerviewbase.cpp:947
Comment 9 Myriam Schweingruber 2012-08-25 14:32:28 UTC
Confirmed by various duplicates, setting status correctly.
Comment 10 Den.Jean 2012-08-25 18:31:27 UTC
Created attachment 73468 [details]
New crash information added by DrKonqi

kmail (4.8.5) on KDE Platform 4.8.5 (4.8.5) using Qt 4.8.2

- What I was doing when the application crashed:
New mail -> Save as draft -> Crash 
Reported again as after many Kde Fedora 17 updates, the bug remains the same.

-- Backtrace (Reduced):
#7  QSharedDataPointer (o=..., this=0xbf9d43dc) at /usr/include/QtCore/qshareddata.h:93
#8  assignEntityPrivate (one=..., other=...) at /usr/src/debug/kdepimlibs-4.8.5/akonadi/entity.cpp:49
#9  0xb6544678 in Akonadi::Entity::operator= (this=0xbf9d4430, other=...) at /usr/src/debug/kdepimlibs-4.8.5/akonadi/entity.cpp:116
#10 0xb478733b in operator= (this=<optimized out>) at /usr/include/kde4/akonadi/collection.h:75
#11 Message::ComposerViewBase::slotSaveMessage (this=0x9f33378, job=0xb853690) at /usr/src/debug/kdepim-4.8.5/messagecomposer/composerviewbase.cpp:947
Comment 11 thus 2012-09-14 21:35:29 UTC
Created attachment 73920 [details]
New crash information added by DrKonqi

kontact (4.8.4) on KDE Platform 4.8.4 (4.8.4) using Qt 4.8.1

- What I was doing when the application crashed:
1. I create a new mail.
2. I use the menu Entry 'Als Entwurf speichern' or 'Als Vorlage speichern' 
3. Kontact immediately crashes

-- Backtrace (Reduced):
#7  QSharedDataPointer (o=..., this=0xbfb86cbc) at /usr/include/qt4/QtCore/qshareddata.h:93
#8  assignEntityPrivate (one=..., other=...) at ../../akonadi/entity.cpp:49
#9  0xb401d007 in Akonadi::Entity::operator= (this=0xbfb86d28, other=...) at ../../akonadi/entity.cpp:116
#10 0xad40087d in operator= (this=<optimized out>) at /usr/include/akonadi/collection.h:75
#11 Message::ComposerViewBase::slotSaveMessage (this=0x85cce68, job=0x92fd738) at ../../messagecomposer/composerviewbase.cpp:944
Comment 12 Den.Jean 2012-09-15 05:39:10 UTC
I had problem from Kde 4.6 till 4.9.1
Problem solved by setting again the value of the destination of the drafts for every account.
Kmail -> configure kmail ->  identities -> modify each identitiy ->  page advanced -> set drafts folder value again using browse button
Comment 13 Laurent Montel 2012-09-15 09:50:53 UTC
sent folder value was invalid ?
Comment 14 Laurent Montel 2012-09-15 10:43:11 UTC
Git commit d1c9e290af87c9e4f424189e9f2f9f454e6890d9 by Montel Laurent.
Committed on 15/09/2012 at 12:42.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 298831 - Kmail2 crash on save as draft

FIXED-IN: 4.9.2

M  +15   -6    messagecomposer/composerviewbase.cpp
M  +1    -0    messagecomposer/composerviewbase.h

http://commits.kde.org/kdepim/d1c9e290af87c9e4f424189e9f2f9f454e6890d9
Comment 15 Den.Jean 2012-09-15 16:08:10 UTC
On Saturday 15 September 2012 09:50:53 you wrote:
> sent folder value was invalid ?
The configuration dialog did not show something invalid.
Just redefining it fixed it.
I have had the problem with so many kmail versions
I tried to solve them by deleting the entire .kde and re
defining everything by hand, except the emailidentities file
I copied over.
This file used to contain for
Drafts=drafts
now it contains
Drafts=15

Kind regards,

Jan
Comment 16 Laurent Montel 2012-09-15 18:06:14 UTC
Was fixed. I reproduced it.
Thanks
Comment 17 thus 2012-09-16 20:43:36 UTC
Thanks a lot,

your proposed procedure succeeded.
Any identity had wrong settings for 'sent', 'Entwürfe' and 'Vorlagen'.
The settings were repaired automatically when I hit:
Kmail -> configure kmail ->  identities -> modify each identitiy

Unfortunately I had the Idea before by myself, but I did not find the Dialogue 
to change this setting.

I tried popup-dialog of  'Drafts'-Folder -> Ordner-Eigenschaften  -> any tab
but there was no setting for the folder.

I searched in Kmail -> configure kmail  any tab 
but i never thought that the setting could be identity-specific.

Ok, now I know it.


Nevertheless nice job you are doing, thanks a lot again.


Am Samstag, 15. September 2012, 05:39:10 schrieben Sie:
> https://bugs.kde.org/show_bug.cgi?id=298831
> 
> --- Comment #12 from Den.Jean@telenet.be ---
> I had problem from Kde 4.6 till 4.9.1
> Problem solved by setting again the value of the destination of the drafts
> for every account.
> Kmail -> configure kmail ->  identities -> modify each identitiy ->  page
> advanced -> set drafts folder value again using browse button
Comment 18 Jekyll Wu 2013-02-26 05:22:37 UTC
*** Bug 312562 has been marked as a duplicate of this bug. ***