Fix Bug 298831 - Kmail2 crash on save as draft

FIXED-IN: 4.9.2
BUG: 298831