messagecomposer/composerviewbase.h
@@ -256,6 +256,7 @@ private slots:
   void slotSaveMessage( KJob *job );
 
 private:
+  Akonadi::Collection defaultSpecialTarget() const;
   /**
   * Searches the mime tree, where root is the root node, for embedded images,
   * extracts them froom the body and adds them to the editor.
